# pytts

./: .gitignore  CSV_COLUMNS.md  LICENSE  README.md  STRATEGIES.md  pyproject.toml  requirements.txt
examples/: Modernisme_cartas.xlsx  generate_decks.py  generate_pdf_from_csv.py  generate_report.py  modernisme-advanced.py  modernisme_advanced.py  modernisme_game.py  run_simulations.py  run_simulations_advanced.py  simple_game.py
modernisme_decks/: artist_deck.csv  encargo_cards.csv  moda_conjunto_cards.csv  moda_tema_cards.csv  work_deck.csv
pytts/: __init__.py  board.py  card.py  deck.py  game.py  hand.py  player.py  round.py  slot.py  strategy.py
tests/: test_basic.py
